# website-checker

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  env.example  index.md  pyproject.toml
.github/workflows/: pre-release.yml  release.yml  tests.yml
docs/: CONTRIBUTION.md  CREDITS.md
src/website_checker/: __init__.py  checks.py  cli.py  helpers.py
tests/checks/: __init__.py  check_health_test.py  check_latency_test.py  check_network_test.py  conftest.py
tests/cli/: __init__.py  cli_health_test.py  cli_latency_test.py  cli_main_test.py  cli_network_test.py  conftest.py
