[tool.poetry]
name = "website-checker"
version = "0.3.0"
description = "A simple python application for running checks against websites."
authors = ["aidanmelen"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.0"
structlog = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3"
flake8 = "^3.7.9"
flake8-bugbear = "^20.11.1"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.5.0"
pep8-naming = "^0.11.1"
pre-commit = "^2.9.2"
pre-commit-hooks = "^3.3.0"
pytest = "^6.1.2"
pytest-cov = "^2.8.1"
pytest-mock = "^3.3.1"
reorder-python-imports = "^2.3.6"

[tool.poetry.scripts]
check = "website_checker.cli:cli"

[tool.black]
line-length = 80

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["website_checker"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
